--- a/components/tag-category-table.html
+++ b/components/tag-category-table.html
@@ -1,9 +1,10 @@
-<div>
+<div ng-controller="languageController">
     <!--popup header-->
     <md-toolbar id="popup-toolbar">
         <div layout="row" layout-align="end center" class="width-100">
             <md-button class="md-icon-button margin-none" ng-click="hide()">
-                <img src="img/icons/close-icon.png" aria-label="Close dialog" alt="Close" title="Close"/>
+                <img src="img/icons/close-icon.png" aria-label="{{lang.closeButton}}" alt="{{lang.closeButton}}"
+                     title="{{lang.closeButton}}"/>
             </md-button>
         </div>
 
@@ -13,7 +14,7 @@
 
         <div layout="column">
             <div layout="row" layout-align="center center" class="">
-                <h1 class=" font-iceberg font-x-large">{{user.name}} LOCATIONS</h1>
+                <h1 class=" font-iceberg font-x-large">{{lang.tagCategories | uppercase}}</h1>
             </div>
         </div>
     </md-toolbar>
@@ -25,46 +26,46 @@
 
     <div layout="column" layout-align="center center" ng-controller="languageController">
 
-        <md-table-container class="margin-bottom-40-px">
+        <md-table-container>
 
             <table md-table md-row-select="options.rowSelection" ng-model="selected"
                    md-progress="promise">
 
                 <thead md-head md-order="query.order">
                 <tr md-row>
-                    <th md-column><span class="color-darkcyan">{{lang.name}}</span></th>
+                    <th md-column><span class="color-darkcyan">{{lang.name | uppercase}}</span></th>
                 </tr>
                 </thead>
 
                 <tbody md-body>
                 <tr md-row md-select="anchor" md-on-select="logItem" md-auto-select="true"
-                    ng-repeat="location in locations | limitTo: query.limit: (query.page -1 ) * query.limit">
+                    ng-repeat="category in tagCategories | limitTo: query.limit: (query.page -1 ) * query.limit">
 
-                    <td md-cell ng-class="{'md-placeholder': !location.name}">
-                        {{location.name || 'Inserire nome'}}
+                    <td md-cell ng-click="editCell($event, category, 'description')" ng-class="{'md-placeholder': !category.name}">
+                        {{category.name || lang.insertName}}
                     </td>
-
-                    <td md-cell ng-click="deleteManagedLocation(location)"><img
-                            src="img/icons/delete_trash_24.png" alt="{{lang.deleteLocation}}" title="{{lang.deleteLocation}}"></td>
+                    <td md-cell ng-click="deleteTagCategory($event, category)"><img
+                            src="img/icons/delete_trash_24.png" alt="{{lang.deleteCategory}}" title="{{lang.deleteCategory}}"></td>
                 </tr>
-                <tr md-row ng-show="locations.length === 0">
+                <tr md-row ng-show="tagCategories.length === 0">
                     <td md-cell colspan="8" class="text-center color-red">{{lang.noResultFound}}</td>
                 </tr>
                 </tbody>
             </table>
         </md-table-container>
 
-        <md-input-container md-no-float class="md-block width-100 margin-top-bottom-25-px">
+        <md-input-container md-no-float class="md-block width-100 margin-bottom-0">
             <div layout="row" layout-align="center end" class="margin-bottom-30-px">
                 <img src="img/icons/add_row_32.png" class="outline-none cursor-pointer"
-                     ng-click="manageNewLocation()" alt="{{lang.addLocation}}" title="{{lang.addLocation}}">
+                     ng-click="addTagCategory()" alt="{{lang.addTagCategory}}" title="{{lang.addTagCategory}}">
             </div>
         </md-input-container>
 
-        <md-table-pagination class="color-red background-white position-fixed bottom-0 width-100" md-limit="query.limit" md-limit-options="query.limitOptions"
+        <md-table-pagination class="color-red" md-limit="query.limit" md-limit-options="query.limitOptions"
                              md-page="query.page"
-                             md-total="{{locations.length}}" md-on-paginate="">
+                             md-total="{{tagCategories.length}}" md-on-paginate="">
         </md-table-pagination>
     </div>
 </md-content>
 <!--end popup content-->
+
