--- a/components/tag-info.html
+++ b/components/tag-info.html
@@ -24,19 +24,31 @@
 <md-content class="popup-padding">
     <div layout="column" layout-align="center center" ng-controller="languageController">
         <md-list>
-            <md-list-item class="width-300-px">
+            <md-list-item class="width-500-px">
                 <p class="float-left">{{lang.tagType}}:</p>
                 <p class="float-right text-right">{{tag.tag_type_name}}</p>
             </md-list-item>
-            <md-list-item class="width-300-px">
+            <md-list-item class="width-500-px">
                 <p class="float-left">{{lang.floor}}:</p>
                 <p class="float-right text-right">{{tag.floor_name}}</p>
             </md-list-item>
-            <md-list-item class="width-300-px">
+            <md-list-item class="width-500-px">
                 <p class="float-left">{{lang.anchor}}:</p>
                 <p class="float-right text-right">{{tag.anchor_name}}</p>
             </md-list-item>
-            <md-list-item class="width-300-px">
+            <md-list-item class="width-500-px">
+                <p class="float-left">{{lang.time}}:</p>
+                <p class="float-right text-right">{{tag.time}}</p>
+            </md-list-item>
+            <md-list-item class="width-500-px">
+                <p class="float-left">{{lang.gpsTime}}:</p>
+                <p class="float-right text-right">{{tag.gps_time}}</p>
+            </md-list-item>
+            <md-list-item class="width-500-px">
+                <p class="float-left">{{lang.alarmTime}}:</p>
+                <p class="float-right text-right">{{tag.alarm_time}}</p>
+            </md-list-item>
+            <md-list-item class="width-500-px">
                 <p class="float-left">{{lang.batteryLevel}}:</p>
                 <p class="float-right text-right"><img alt="{{lang.batteryStatus}}" title="{{lang.batteryStatus}}"
                                                        aria-label="{{lang.batteryStatus}}"
