--- a/components/indoor_offline_anchors_info.html
+++ b/components/indoor_offline_anchors_info.html
@@ -49,7 +49,7 @@
                         <h4 class="color-darkgray">{{ offlineAnchors.length }} {{lang.areOfflineAnchors}}</h4>
                         <md-select ng-if="offlineAnchors.length > 0" ng-model="antani"
                                    placeholder="{{lang.offlineAnchors}}">
-                            <md-option class="margin-top-bottom-25-px" ng-value="anchor" ng-disabled="$index + 1" ng-repeat="anchor in offlineAnchors">
+                            <md-option class="padding-top-bottom-35px padding-left-10-px" ng-value="anchor" ng-disabled="$index + 1" ng-repeat="anchor in offlineAnchors">
                                 <p><b class="color-darkgray">{{anchor.name}}</b></p>
                                 <p>{{lang.location}} : {{anchor.location_name}}</p>
                                 <p>{{lang.floor}} : {{anchor.floor_name}}</p>
@@ -66,7 +66,7 @@
                         <h4 class="color-red">{{ shutDownAnchors.length }} {{lang.areShutDownAnchors}}</h4>
                         <md-select ng-if="shutDownAnchors.length > 0" ng-model="antani"
                                    placeholder="{{lang.shutDownAnchors}}">
-                            <md-option id="empty-battery-anchor-list" class="margin-top-bottom-25-px" ng-value="anchor" ng-disabled="$index + 1" ng-repeat="anchor in shutDownAnchors">
+                            <md-option id="empty-battery-anchor-list" class="padding-top-bottom-35px padding-left-10-px" ng-value="anchor" ng-disabled="$index + 1" ng-repeat="anchor in shutDownAnchors">
                                 <div><p class="margin-none"><b class="color-red">{{anchor.name}}</b></p>
                                 <p class="margin-none">{{lang.location}} : {{anchor.location_name}}</p>
                                 <p class="margin-none">{{lang.floor}} : {{anchor.floor_name}}</p>
