--- a/components/canvas.html
+++ b/components/canvas.html
@@ -101,7 +101,9 @@
         <!--end draw buttoon-->
 
         <!--header text-->
-        <div layout="row" layout-align="center center" class="background-ottanio width-100" style="padding-left: 3%;">
+        <div layout="row" layout-align="center center" class="background-ottanio width-100 position-absolute top-0">
+            <div id='working-zones' class="position-absolute bottom-0 width-100">
+            </div>
             <img src="img/icons/login-icon.png" class="canvas-header-image" alt="Smart Track"
                  title="Smart Track">
             <div class="margin-bottom-30-px width-30">
