--- a/components/emergency-alarm-info.html
+++ b/components/emergency-alarm-info.html
@@ -57,6 +57,11 @@
                 </md-list>
             </div>
         </div>
+        <div layout="row" layout-align="center center">
+            <div class="margin-left-20-px">
+                <md-button ng-click="sendEvacuation()" id="evacuation-button" ng-class="evacuation_button" class="md-raised color-white margin-auto margin-top-20-px">{{evacuation_value}}</md-button>
+            </div>
+        </div>
     </md-content>
     <!--end popup content-->
 </div>
