--- a/css/canvas.css
+++ b/css/canvas.css
@@ -3,6 +3,10 @@ md-toolbar{
     background-color: #0093c4!important;
 }
 
+#canvas-container{
+    margin-top: 139px;
+}
+
 .canvas-header-image{
     width: 100px;
     margin: 20px 0 20px 0;
